# marimo-notebook-template

./: .gitignore  Makefile  README.md  notebook.py  pyproject.toml
.github/: pull-request-template.md
.github/workflows/: ci.yml
tests/: test_example.py
