[project]
name = "marimo-notebook-template"
version = "0.1.0"
requires-python = ">=3.13"

dependencies = [
    "marimo>=0.14.17",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coveralls>=4.0.1",
    "ipython>=9.4.0",
    "mypy>=1.17.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.black]
line-length = 90

# full mypy linting by default
[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ["tests/","build/"]

# relax mypy linting requirements for notebook file(s)
[[tool.mypy.overrides]]
module = ["notebook"]
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.pytest.ini_options]
log_level = "INFO"

[tool.ruff]
target-version = "py313"

# set max line length
line-length = 90

# enumerate all fixed violations
show-fixes = true

[tool.ruff.lint]
select = ["ALL", "PT"]
ignore = [
    "C90",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D417",
    "EM101",
    "EM102",
    "FIX002",
    "G004",
    "N812",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PTH",
    "S321",
    "TD003",
    "TRY003"
]

# allow autofix behavior for specified rules
fixable = ["E", "F", "I", "Q"]

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "ANN",
    "ARG001",
    "PLR2004",
    "S101",
]
"tests/fixtures/**" = ["ALL"]
"tests/fixtures/*" = ["ALL"]
# relax ruff linting requirements for notebook file(s)
"notebook.py" = [
    "ANN001",
    "ANN201",
    "ANN202",
    "E501",
    "PLC0415",
    "PLR1711",
    "PLR2004",
    "S101",
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 90

[tool.ruff.lint.pydocstyle]
convention = "google"